--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </div>
             <!-- end of single item -->
             <!-- single item -->
-            <div class="content active" id="vision">
+            <div class="content" id="vision">
               <h4>vision</h4>
               <!-- vision -->
               <p>
